# tinylog

./: .gitignore  CMakeLists.txt  README.md
include/minispdlog/: common.h  formatter.h  level.h  patternformatter.h
include/minispdlog/details/: logmsg.h  utils.h
include/minispdlog/sinks/: basesink.h  consolesink.h
src/: CMakeLists.txt  formatter.cpp  level.cpp  patternformatter.cpp
src/details/: utils.cpp
tests/: CMakeLists.txt  test.cpp  test_level.cpp
